feat: implement comprehensive code formatting and style improvements
- Reformat all DTO classes to use consistent multi-line record syntax
- Standardize Lombok annotations across entity classes
- Update Spring Boot version to 4.0.6 and related dependencies
- Improve code readability with var keyword usage in test classes
- Enhance error handling with underscore variable naming
- Update OpenAPI documentation format for all request/response DTOs
- Implement consistent code style across controllers and services
- Add nullability annotations for better code safety
- Update project version to 1.0.0-SNAPSHOT

BREAKING CHANGE: The code formatting changes may require IDE reimports and could affect merge conflicts with existing branches. All team members should pull these changes before making new commits.